<resources>
    <string name="app_name">CPMS</string>

    <!--User managemnet -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_heading">Sign In</string>
    <string name="construction_project_management_SubHeading">Construction Project Management</string>
    <string name="email_textBox_Placeholder">Email</string>
    <string name="password_textBox_Placeholder">Password</string>
    <string name="forgot_password_signIn_form">Forgot Password</string>
    <string name="sign_in_btn_value">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue1">Continue</string>
    <string name="forgot_password">Reset Password</string>
    <string name="fill_the_form_to_reset_your_password">Fill The Form To Reset Your Password</string>
    <string name="email_address">Email Address</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dashboard">Dashboard</string>
    <string name="work_in_progress">Work In Progress</string>

    <!--Miscellaneous-->
    <string name="title_activity_secondary">SecondaryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Messages">Messages</string>
    <string name="Forums">Forums</string>


    <!--Messaging func-->
    <string name="message_writepad_placeholder_text">Aa</string>

    <!--Forum Func-->
    <string name="title_of_the_post_hint">Title Of The Post</string>
    <string name="forum_description_hint">Description</string>
    <string name="helpertext_forum">Type In The Forum Title</string>
    <string name="descr_forum_helpertext">Type In The Description</string>

    <!--Expenses-->
    <string name="amount_listadapter">Amount</string>
    <string name="expenses">Expenses</string>
    <string name="directCost">Direct Costs</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="consultation">Consultation</string>
    <string name="overheads">Overheads</string>
    <string name="recents">Recent Summary</string>
    <string name="item_name">Item Name</string>
    <string name="inventory_item_qty">Item Qty</string>
    <string name="inventory_item_name">item Name</string>
    <string name="categories_title">CATEGORIES</string>
    <string name="descriptionExpense">Description</string>
    <string name="Rs_Expense">Rs.</string>
    <string name="category_expense">Category</string>
    <string name="submit">Submit</string>
    <string name="deleteExp">Delete Expense</string>
    <string name="editExp">Edit Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="exp_report">Report</string>

    //Plan related strings
    <string name="newPlanTopBarTitle">Plan</string>
    <string name="planTopBarTitle">View Plans</string>
    <string name="planDescription">Plan</string>
    <string name="uploadPlan">Upload Plan</string>
    <string name="viewPlan">View Plans</string>
    <string name="view_current_plans">View Current Plans</string>
    <string name="upload_a_new_plan">Upload A New Plan</string>

    <string name="inventoryManagerPanelPendingReqTitle">Pending Requests</string>
    <string name="edit_inventory_delete_menu_text">Delete</string>


    //Array to get units for inventory units spinner

    <string-array name="inventory_units_array">
        <item>Kg</item>
        <item>Tonnes</item>
        <item>Meters</item>
        <item>Square Meters</item>
        <item>Cubes</item>
        <item>Liters</item>
        <item>Nos</item>
        <item>Bags</item>
        <item>Bars</item>


    </string-array>
    <string name="title_activity_project_switcher">projectSwitcher</string>


</resources>
