<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1_cropped"
    tools:context=".userManagement.signupFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/um_bottom_spacing"
        android:paddingLeft="@dimen/um_side_spacing"
        android:paddingRight="@dimen/um_side_spacing"
        android:paddingTop="@dimen/um_top_spacing">

        <TextView
            android:id="@+id/signUpHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/um_padding_shadow"
            android:shadowColor="@color/um_shadow_color"
            android:shadowDx="5"

            android:shadowDy="5"
            android:shadowRadius="15"
            android:text="@string/sign_up"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/um_fp_main_heading_text_size" />

        <TextView
            android:id="@+id/signUpSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/um_subheading_spacing_top"
            android:padding="@dimen/um_padding_shadow"
            android:shadowColor="@color/um_shadow_color"
            android:shadowDx="5"

            android:shadowDy="5"
            android:shadowRadius="24"
            android:text="@string/construction_project_management_SubHeading"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/um_subheading_text_size" />

        <!--First Name Entry-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fname_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpSubHeader"
            android:layout_marginTop="@dimen/um_signup_heading_spacing"
            android:hint="@string/first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <!--Last Name Entry-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lname_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fname_inputLayout"
            android:hint="@string/last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <!--Mobile Number Entry-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lname_inputLayout"
            android:hint="@string/mobile_number">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobile_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone_24px"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <!--Email Entry-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_inputLayout"
            android:hint="@string/email_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_editText"
                android:drawableLeft="@drawable/ic_alt_email"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <!--Password Entry-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_inputLayout"
            android:hint="@string/password_textBox_Placeholder"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_editText"
                android:drawableLeft="@drawable/ic_password_solid"
                android:inputType="textPassword"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.TextInputLayout>

        <!--Confirm Password Entry-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confPassword_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_inputLayout"
            android:hint="@string/confirm_password"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confPassword_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_editText"
                android:drawableLeft="@drawable/ic_password_solid"
                android:inputType="textPassword"
                tools:ignore="RtlHardcoded"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/ContinueBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confPassword_inputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/um_btn_top_spacing"
            android:text="@string/continue1"
            app:rippleColor="@color/primaryColor" />


    </RelativeLayout>

</ScrollView>