<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".userManagement.forgotPasswordResetFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:padding="5dp"
                android:shadowColor="#000"
                android:shadowDx="5"

                android:shadowDy="5"
                android:shadowRadius="15"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/resetYourPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"

                android:shadowColor="#000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="30"

                android:text="@string/fill_the_form_to_reset_your_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp" />

            <!--Password Entry-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/resetYourPassword"
                android:layout_marginTop="120dp"
                android:hint="@string/new_password"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_editText"
                    android:drawableLeft="@drawable/ic_password_solid"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <!--Confirm Password Entry-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confPassword_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_inputLayout"
                android:hint="@string/confirm_new_password"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confPassword_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_editText"
                    android:drawableLeft="@drawable/ic_password_solid"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded"

                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.button.MaterialButton
                android:id="@+id/changePasswordBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confPassword_inputLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/change_password"
                app:rippleColor="@color/primaryColor" />

        </RelativeLayout>


    </ScrollView>

</FrameLayout>